Complete open PDF workflow and UI issues